Fixed navbar-brand vertical align issue

--- a/src/scss/_demo.scss
+++ b/src/scss/_demo.scss
@@ -69,7 +69,7 @@
 
   @include bp('md') {
     position: relative;
-    top: -3.75rem;
+    top: -3.4rem;
     font-size: 3rem;
 
     > .logo {
